--- a/WindowsSnapshots/WindowsSnapshots/WindowsSnapshots.csproj
+++ b/WindowsSnapshots/WindowsSnapshots/WindowsSnapshots.csproj
@@ -74,6 +74,7 @@
     <Compile Include="ScanOtherSnapshots.cs" />
     <Compile Include="ScanRegistry.cs" />
     <Compile Include="Settings.cs" />
+    <Compile Include="Tests.cs" />
     <Compile Include="VirtualFileEntry.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
