--- a/WindowsSnapshots/WindowsSnapshots/WindowsSnapshots.csproj
+++ b/WindowsSnapshots/WindowsSnapshots/WindowsSnapshots.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackupAsterFolder.cs" />
     <Compile Include="HelperFirewall.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="HelperServices.cs" />
