--- a/WindowsSnapshots/Helpers/Helpers.csproj
+++ b/WindowsSnapshots/Helpers/Helpers.csproj
@@ -74,5 +74,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Registry.Comment.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
